# fsc-rss-alert

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  sources.yaml  state.json
.claude/: settings.json
.github/workflows/: fsc-rss-poll.yml  poll.yml  publish-ecr.yml
docs/: DESIGN-v2.md  DESIGN.md
docs/specs/slice-1/: INDEX.md  T1-hexagonal-core.md  T2-sqlite-state.md  T3-rss-adapter-mofa.md  T4-datatables-adapter-lawreq.md  T5-slack-bot-notifier.md  (+2 more)
feed_collector/: __init__.py  __main__.py  app.py  cli.py  config.py  digest.py  errors.py  feed.py  notify.py  ports.py  registry.py  state.py
feed_collector/adapter/: __init__.py
feed_collector/application/: __init__.py  dto.py
feed_collector/bootstrap/: __init__.py  container.py
feed_collector/core/: __init__.py  dedup.py  poll.py
feed_collector/domain/: __init__.py  model.py
fsc_rss_alert/: __init__.py  app.py  config.py  feed.py  notify.py  state.py
infra/aws/: README.md  backend.example.hcl  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh.tftpl  variables.tf  versions.tf
launchd/: com.mildsalmon.feed-collector-digest.plist  com.mildsalmon.feed-collector.plist  com.mildsalmon.fsc-rss-alert.plist
scripts/: run_digest.sh  run_poll.sh
tests/: test_bulk_sdn_adapter.py  test_cli.py  test_core_poll.py  test_datatables_adapter.py  test_digest.py  test_digest_cli.py  test_html_scrape_adapter.py  test_json_board_adapter.py  test_poll_service.py  test_registry.py  test_rss_adapter.py  test_slack_bot.py  test_sqlite_audit_log.py  test_sqlite_state_repo.py
(+36 files in other folders)
