[project]
name = "feed-collector"
version = "0.1.0"
description = "Poll configured feeds and send Slack or Telegram alerts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser==6.0.11",
    "python-dateutil>=2.9,<3",
    "PyYAML>=6,<7",
    "requests>=2.32,<3",
]

[dependency-groups]
dev = [
    "pyright>=1.1,<2",
    "pytest>=8,<9",
]

[tool.uv]
default-groups = []
